--- a/Codeup_100/1010-1027 [기초-입출력] .ipynb
+++ b/Codeup_100/1010-1027 [기초-입출력] .ipynb
@@ -366,7 +366,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a, b, c = map(int, input().split(':'))\n",
+    "print('%d' %b)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -380,7 +383,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "y, m, d = input().split('.')\n",
+    "print(\"%02d-%02d-%04d\" %(int(d), int(m), int(y)))"
+   ]
   }
  ],
  "metadata": {
