--- a/Codeup_100/1029-1037 [기초-데이터형, 출력변환].ipynb
+++ b/Codeup_100/1029-1037 [기초-데이터형, 출력변환].ipynb
@@ -26,7 +26,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = input()\n",
+    "print('%.11lf' %float(a))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,10 +54,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 7,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "13\n",
+      "11\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(), 8)\n",
+    "print('%d' %a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -107,10 +122,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 8,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "f\n",
+      "17\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input(), 16)\n",
+    "print('%o' %a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -121,10 +148,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 11,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "A\n",
+      "65\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "print(ord(a))"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -135,10 +174,24 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 17,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "65\n",
+      "A\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = int(input())\n",
+    "print(chr(a))"
+   ]
   }
  ],
  "metadata": {
