--- a/Codeup_100/1093-1099 [1차원, 2차원 배열].ipynb
+++ b/Codeup_100/1093-1099 [1차원, 2차원 배열].ipynb
@@ -9,10 +9,28 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": []
+   "execution_count": 85,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "3 7 9\n",
+      "63\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, c = map(int, input().split())\n",
+    "days = 0\n",
+    "for day in range(1, 100):\n",
+    "    if day%a==0 | day%b==0 | day%c==0:\n",
+    "        days = day+days\n",
+    "        print(days)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -51,10 +69,102 @@
   },
   {
    "cell_type": "code",
+   "execution_count": 124,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "ename": "IndentationError",
+     "evalue": "unexpected indent (<ipython-input-124-57734ce30de2>, line 8)",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;36m  File \u001b[0;32m\"<ipython-input-124-57734ce30de2>\"\u001b[0;36m, line \u001b[0;32m8\u001b[0m\n\u001b[0;31m    print(a)\u001b[0m\n\u001b[0m    ^\u001b[0m\n\u001b[0;31mIndentationError\u001b[0m\u001b[0;31m:\u001b[0m unexpected indent\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input().split()\n",
+    "n = int(a[0])\n",
+    "for a in range(1, 20):\n",
+    "    if (a < n) :\n",
+    "        a = 1\n",
+    "    else :\n",
+    "        a = 0\n",
+    "        print(a)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 156,
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "0 0\n",
+      "1 1\n",
+      "2 2\n",
+      "3 3\n",
+      "4 4\n",
+      "5 5\n",
+      "6 6\n",
+      "7 7\n",
+      "8 8\n",
+      "9 9\n",
+      "10 10\n",
+      "11 11\n",
+      "12 12\n",
+      "13 13\n",
+      "14 14\n",
+      "15 15\n",
+      "16 16\n",
+      "17 17\n",
+      "18 18\n",
+      "19 19\n"
+     ]
+    }
+   ],
+   "source": [
+    "for a, b in zip(range(20), range(20)):\n",
+    "    print(a, b)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 153,
+   "metadata": {},
+   "outputs": [
+    {
+     "ename": "IndexError",
+     "evalue": "list index out of range",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m                                Traceback (most recent call last)",
+      "\u001b[0;32m<ipython-input-153-32d4f45b92f3>\u001b[0m in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[0;32m----> 1\u001b[0;31m \u001b[0mmat\u001b[0m \u001b[0;34m=\u001b[0m \u001b[0;34m[\u001b[0m\u001b[0;36m3\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m[\u001b[0m\u001b[0;36m4\u001b[0m\u001b[0;34m]\u001b[0m\u001b[0;34m\u001b[0m\u001b[0;34m\u001b[0m\u001b[0m\n\u001b[0m",
+      "\u001b[0;31mIndexError\u001b[0m: list index out of range"
+     ]
+    }
+   ],
+   "source": [
+    "mat = [3][4]"
+   ]
+  },
+  {
+   "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "5\n",
+    "1 1\n",
+    "2 2\n",
+    "3 3\n",
+    "4 4\n",
+    "5 5"
+   ]
   },
   {
    "cell_type": "markdown",
