--- a/Codeup_100/1010-1027 [기초-입출력] .ipynb
+++ b/Codeup_100/1010-1027 [기초-입출력] .ipynb
@@ -348,26 +348,25 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 1,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "boy\n",
-      "'b'\n",
+      "Boy\n",
+      "'B'\n",
       "'o'\n",
       "'y'\n"
      ]
     }
    ],
    "source": [
-    "a= input()\n",
+    "a = input()\n",
     "\n",
     "for i in range(len(a)):\n",
-    "    b = a[i]\n",
-    "    print('\\'%c\\'' %b)"
+    "    print('\\'%c\\'' %a[i])"
    ]
   },
   {
@@ -379,10 +378,30 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 37,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "75254\n",
+      "[70000]\n",
+      "[5000]\n",
+      "[200]\n",
+      "[50]\n",
+      "[4]\n"
+     ]
+    }
+   ],
+   "source": [
+    "a = input()\n",
+    "\n",
+    "for i in range(len(a)):\n",
+    "    x = int(a[i])\n",
+    "    n = (len(a)-i-1)\n",
+    "    print([x*(10**n)])"
+   ]
   },
   {
    "cell_type": "markdown",
