--- a/Codeup_100/1029-1037 [기초-데이터형, 출력변환].ipynb
+++ b/Codeup_100/1029-1037 [기초-데이터형, 출력변환].ipynb
@@ -12,7 +12,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = int(input())\n",
+    "print(a)"
+   ]
   },
   {
    "cell_type": "markdown",
@@ -43,7 +46,10 @@
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": []
+   "source": [
+    "a = int(input())\n",
+    "print('%d' %a)"
+   ]
   },
   {
    "cell_type": "markdown",
