--- a/Codeup_100/1078-1092 [종합].ipynb
+++ b/Codeup_100/1078-1092 [종합].ipynb
@@ -311,7 +311,42 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 71,
+   "metadata": {
+    "scrolled": true
+   },
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "2 2 2\n",
+      "0 0 0\n",
+      "0 0 1\n",
+      "0 1 0\n",
+      "0 1 1\n",
+      "1 0 0\n",
+      "1 0 1\n",
+      "1 1 0\n",
+      "1 1 1\n",
+      "8\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, c = map(int, input().split())\n",
+    "count = 0\n",
+    "for i in range(a):\n",
+    "    for j in range(b):\n",
+    "        for k in range(c):\n",
+    "            print(i, j, k)\n",
+    "            count +=1\n",
+    "print(count)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 69,
    "metadata": {},
    "outputs": [
     {
@@ -325,7 +360,7 @@
       "0 1 1\n",
       "1 0 0\n",
       "1 0 1\n",
-      "1 0 1\n"
+      "6\n"
      ]
     }
    ],
@@ -334,31 +369,13 @@
     "a = int(a)\n",
     "b = int(b)\n",
     "c = int(c)\n",
-    "\n",
+    "count = 0\n",
     "for r in range(a):\n",
     "    for g in range(b):\n",
     "        for b in range(c):\n",
     "            print(r, g, b)\n",
-    "else:\n",
-    "    print(r, g, b)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "2 2 2\n",
-    "\n",
-    "0 0 0\n",
-    "0 0 1\n",
-    "0 1 0\n",
-    "0 1 1\n",
-    "1 0 0\n",
-    "1 0 1\n",
-    "1 1 0\n",
-    "1 1 1"
+    "            count +=1\n",
+    "print(count)"
    ]
   },
   {
@@ -622,19 +639,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 43,
    "metadata": {},
-   "outputs": [],
-   "source": []
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "1 3 5\n",
+      "15\n"
+     ]
+    }
+   ],
+   "source": [
+    "a, b, c = map(int, input().split())\n",
+    "num = a*b*c\n",
+    "\n",
+    "for day in range(1, num+1):\n",
+    "    if day%a == 0 | day%b == 0 | day%c == 0:\n",
+    "        break\n",
+    "print(day)"
+   ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
    "metadata": {},
    "outputs": [],
-   "source": [
-    "3 7 9"
-   ]
+   "source": []
   },
   {
    "cell_type": "code",
